tourist_agency_project/src/main/java/com/example/demo/error/PackageNotFoundException.java
package com.example.demo.error;

import org.apache.coyote.BadRequestException;

public class PackageNotFoundException extends BadRequestException {//ResourceNotFoundException
    public PackageNotFoundException(String message)  {
        super(message);
    }
}
